assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap');

:root{

    --ff-ubuntu: 'Ubuntu', sans-serif;
    --marine-blue: hsl(213, 96%, 18%);
    --purplish-blue: hsl(243, 100%, 62%);
    --pastel-blue: hsl(228, 100%, 84%);
    --light-blue: hsl(206, 94%, 87%);
    --strawberry-red: hsl(354, 84%, 57%);

    --cool-gray: hsl(231, 11%, 63%);
    --light-gray: hsl(229, 24%, 87%);
    --magnolia: hsl(217, 100%, 97%);
    --alabaster: hsl(231, 100%, 99%);
    --white: hsl(0, 0%, 100%);

    --fs-100: 0.75em;
    --fs-200: 0.85em;
    --fs-250: 1.05em;
    --fs-300: 1.25em;
    --fs-400: 1.45em;
    --fs-500: 1.85em;
    --fs-600: 2.05em;

    --fw-400: 400;
    --fw-500: 500;
    --fw-700: 700;

}
*{
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    font-family: var(--ff-ubuntu);
}
.flex-row{
    display: flex;
}
.flex-column{
    display: flex;
    flex-direction: column;
}
.j-center{
    justify-content: center;
}
.j-between{
    justify-content: space-between;
}

button, a, .step-circle, .switch{
    cursor: pointer;
}
label{
    font-size: var(--fs-200);
    color: var(--marine-blue);
    display: flex;
    justify-content: space-between;
}
label > small{
    color: var(--strawberry-red);
    display: none;
}
input{
    padding: 10px;
    border-radius: 5px;
    border: 1px solid var(--cool-gray);
    outline: none;
    margin-top: 5px;
    width: 100%;
}
input:hover{
    border: 1px solid;
    border-color: linear-gradient(
        to right, hsl(231, 11%, 63%), hsl(213, 96%, 18%)
    );
    /* outline: none; */
}
input.error{
    border: 1px solid var(--strawberry-red);
}
input::placeholder{
    color: var(--cool-gray);
    font-weight: var(--fw-700);
    
}
.step-information{
    display: flex;
    max-width: 100%;
    overflow: hidden;
}
.step-information > div{
    width: 90%;
    margin: -80px 5% 0;
    flex-shrink: 0;
    transform: scale(1);
    padding: 30px 20px;
    background: var(--white);
    border-radius: 10px;
}

/* Mobile layout differences */
.step-type,
.step-information-one footer{
    display: none;
}

.step-type p,
.step-type h4{
    text-transform: uppercase;
}
body{
    background: var(--light-gray);
}

.side-bar{
    position: relative;
    z-index: 5;
    background: url(../images/bg-sidebar-mobile.svg) center no-repeat;
    background-size: cover;
    padding: 30px 0;
    display: flex;
    justify-content: center;
    height: 170px;
}
.step-circle{
    color: var(--white);
    border: 1px solid var(--white);
    width: 35px;
    height: 35px;
    border-radius: 50%;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: var(--fs-200);
    font-weight: var(--fw-500);
    margin-right: 10px;
    transition: all .4s;
}
.step-circle:hover,
.step-circle.active{
    color: var(--marine-blue);
    background: var(--light-blue);
    border: none;
}

/* Step 2 */
.step-information-two footer{
    display: none;
}
.billing{
    display: flex;
    flex-direction: column;
    row-gap: 20px;
}
.billing-opt{
    display: flex;
    padding: 15px;
    border: 1px solid var(--cool-gray);
    border-radius: 10px;
    transition: all .4s;
}
.billing-opt:hover{
    border: 1px solid var(--marine-blue);
    background: var(--magnolia);
}
.billing-opt img{
    width: 40px;
    margin-right: 15px;
}
.billing-opt h3{
    font-size: var(--fs-200);
    color: var(--marine-blue);
}
.billing-opt div p{
    font-size: var(--fs-200);
    color: var(--cool-gray);
    margin-top: 5px;
}
.billing-opt div .yearly-bonus{
    font-size: var(--fs-100);
    font-weight: var(--fw-500);
    color: var(--marine-blue);
    display: none;
}


.billing-duration{
    background: var(--magnolia);
    padding: 10px 0;
    border-radius: 10px;
    margin-top: 30px;
}
.billing-duration p{
    font-size: var(--fs-200);
    font-weight: var(--fw-500);
    display: flex;
    align-items: center;
}

.switch{
    background: var(--marine-blue);
    border-radius: 20px;
    width: 45px;
    padding: 5px 5px;
    display: flex;
    align-items: center;
    margin: 0 20px;
}
.switch.active{
    justify-content: flex-end;
}
.switch > div{
    background: var(--white);
    height: 15px;
    width: 15px;
    border-radius: 50%;
}

/*Step 3*/
.add-ons,
.add-ons-opt{
    display: flex;
    align-items: center;
    align-self: center;
}
.add-ons{
    border: 1px solid var(--cool-gray);
    padding: 15px;
    border-radius: 10px;
    margin-bottom: 10px;
    justify-content: space-between; 
}
.add-ons.active,
.add-ons:hover{
    background: var(--magnolia);
    border: 1px solid var(--marine-blue);
}
.add-ons input{
    width: 20px;
    margin: 0 10px 0 0;
}
.add-ons h3{
    font-size: var(--fs-200);
    color: var(--marine-blue);
}
.add-ons p{
    font-size: var(--fs-100);
    font-weight: var(--fw-400);
    color: var(--purplish-blue);
}
.add-ons-opt p{
    font-size: var(--fs-100);
    font-weight: var(--fw-400);
    color: var(--light-gray);
}

.primary-header{
    color: var(--marine-blue);
    font-size: var(--fs-400);
}
.primary-paragraph{
    color: var(--cool-gray);
    font-size: var(--fs-200);
    margin: 10px 0 25px;
}
.form-input{
    margin-bottom: 10px;
}

.mobile-footer{
    display: flex;
    justify-content: flex-end;
    align-items: center;
    position: absolute;
    height: 10vh;
    width: 100%;
    background: var(--white);
    top: 90vh;
    padding: 0 20px;
}
.mobile-footer.j-between{
    justify-content: space-between;
}
.go-back{
    background: none;
    border: none;
    font-size: var(--fs-200);
    color: var(--cool-gray);
}
.next-step-btn{
    border-radius: 5px;
    border: none;
    color: var(--white);
    font-size: var(--fs-200);
    font-weight: var(--fw-400);
    background: var(--marine-blue);
    padding: 15px 20px;
}

@media (min-width: 750px) {

    /* Desktop layout differences */
    .step-type{
        display: block;
        width: 120px;
    }

    .mobile-footer{
        display: none;
    }

    main{
        display: flex;
        justify-content: center;
        align-items: center;
        min-height: 100vh;
        background: var(--light-gray);
    }

    .container{
        display: flex;
        background: var(--white);
        border-radius: 20px;
        padding: 10px;
        max-width: 750px;
    }

    .side-bar{
        z-index: 5;
        border-radius: 10px;
        background: url(../images/bg-sidebar-desktop.svg) no-repeat;
        background-size: cover;
        display: block;
        padding: 15px 20px;
        height: 450px;
    }

    .step-circle{
        width: 30px;
        height: 30px;
    }
    .step-box-id{
        display: flex;
        align-items: center;
        margin: 25px 0;
    }
  
    .step-type p{
        color: var(--cool-gray);
        font-size: var(--fs-100);
        font-weight: var(--fw-400);
        margin-bottom: 3px;
    }
    .step-type h4{
        color: var(--white);
        font-size: var(--fs-100);
        font-weight: var(--fw-700);
    }

    .step-information > div{
        width: 100%;
        padding: 30px 60px 0;
        background: none;
        margin: 0;
        border-radius: none;
    }
    .step-information-one footer{
        display: flex;
        justify-content: flex-end;
        margin-top: 60px;
    }

    /* Step 2 */
    .step-information-two footer{
        display: flex;
        margin-top: 50px;
    }
    .billing{
        flex-direction: row;
    }
    .billing-opt{
        width: 30%;
        flex-direction: column;
    }
    .billing-opt > div{
        margin-top: 40px;
    }
    .yearly-bonus{
        display: none;
    }


    .next-step-btn{
        padding: 10px 15px;
    }
}

